# wallpapy

./: .env-template  .gitignore  Cargo.toml  README.md  index.html  justfile  rust-toolchain.toml  rustfmt.toml  shell.nix  todo
.cargo/: config.toml
.github/workflows/: rust.yml
.zed/: settings.json
assets/: index.html  manifest.json  style.css
migrations/: 20260608_initial_schema.sql
src/: common.rs  database.rs  gpt.rs  image.rs  main.rs  prompt.rs  routing.rs  server.rs  server_functions.rs  web.rs
src/client/: app.rs  gallery.rs  mod.rs  networking.rs
src/common/: mod.rs  utils.rs
src/server/: auth.rs  commenting.rs  gpt.rs  image.rs  mod.rs  prompt.rs  routing.rs
