[package]
name = "wallpapy"
version = "0.7.2"
edition = "2024"

[dependencies]
log = "0.4.29"
anyhow = "1.0.102"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
parking_lot = "0.12.5"
uuid = { version = "1.23.0", features = ["v4", "fast-rng", "js", "serde"] }
thumbhash = "0.1.0"
chrono = { version = "0.4.44", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "webp",
] }
bitflags = "2.11.1"
schemars = "1.2.1"

# GUI dependencies
egui = { version = "0.34.1", features = ["serde"], optional = true }
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
], optional = true }
egui-notify = { version = "0.22.0", optional = true }
ehttp = { version = "0.7.1", optional = true }
egui_extras = { version = "0.34.1", features = [
    "http",
    "image",
    "webp",
], optional = true }
egui_pull_to_refresh = { version = "0.11.0", optional = true }
egui_thumbhash = { version = "0.10.0", optional = true }
egui-phosphor = { version = "0.12.0", optional = true }

# WebAssembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.95"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"

# Server dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "5.2.0"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.0", features = ["full"] }
ron = "0.12.1"
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "tokio",
] }
tower-http = { version = "0.6.8", features = [
    "fs",
    "async-compression",
    "compression-deflate",
    "compression-gzip",
] }
rand = "0.10.1"
argon2 = { version = "0.5.3", features = ["std"] }
mime_guess = "2.0.5"
webp = "0.3.1"

[features]
default = ["gui"]
gui = [
    "egui",
    "eframe",
    "egui-notify",
    "ehttp",
    "egui_extras",
    "egui_pull_to_refresh",
    "egui_thumbhash",
    "egui-phosphor",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
too-many-lines = "allow"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
