[package]
name = "wallpapy"
version = "0.9.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack"] }
dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-solid"] }

tracing = "0.1.44"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng", "serde", "js"] }
chrono = { version = "0.4.44", features = ["serde"] }
schemars = "1.2.1"
gloo-timers = { version = "0.4.0", features = ["futures"] }
tap = "1.0.1"

wasm-bindgen = "=0.2.118"
web-sys = { version = "=0.3.95", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenvy = "0.15.7"
ron = "0.12.1"
rand = "0.10.1"
serde_json = "1.0.149"
mime_guess = "2.0.5"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["http1", "tokio"] }
tower-http = { version = "0.6.10", features = [
    "fs",
    "async-compression",
    "compression-deflate",
    "compression-gzip",
] }
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "webp",
    "avif",
    "rayon",
] }

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
too-many-lines = "allow"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
