[package]
name = "wallpapy"
version = "0.9.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack"] }

tracing = "0.1.44"
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.4", features = ["v4", "fast-rng", "serde", "js"] }
chrono = { version = "0.4.45", features = ["serde"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
strum = { version = "0.28.0", features = ["derive"] }

wasm-bindgen = "=0.2.118"
web-sys = { version = "=0.3.95", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.9.0", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
dotenvy = "0.15.7"
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["http1", "tokio"] }
tower-http = { version = "0.7.0", features = [
    "fs",
    "compression-full",
    "decompression-full",
] }
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "avif",
    "rayon",
] }
base64 = "0.22.1"

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
too-many-lines = "allow"
volatile-composites = "allow"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
